# BPC-PRP_Robotics_project

./: .gitignore  README.md  all.sh  maze_solving_documentation.docx  run.sh  set.sh
maze_solver/: CMakeLists.txt
maze_solver/include/algorithms/: aruco_detector.hpp  planar_imu_integrator.hpp
maze_solver/include/loops/: maze_loop.hpp
maze_solver/include/nodes/: camera_node.hpp  imu_node.hpp  lidar_node.hpp  motor_node.hpp
maze_solver/src/: main.cpp
maze_solver/src/loops/: maze_loop.cpp
maze_solver/src/nodes/: camera_node.cpp  imu_node.cpp  lidar_node.cpp  motor_node.cpp
maze_solver/tests/: CMakeLists.txt  t_planar_imu_integrator.cpp
src/bpc-prp-cpp-project-template/: CMakeLists.txt
src/bpc-prp-cpp-project-template/include/: RosExampleClass.h
src/bpc-prp-cpp-project-template/include/nodes/: line_follower_node.hpp
src/bpc-prp-cpp-project-template/src/: line_follower_main.cpp  line_node.cpp
src/line_following/: CMakeLists.txt
src/line_following/include/nodes/: line_estimation.hpp
src/line_following/src/: lidar.cpp  lidar_node.cpp  main.cpp  motor_node.cpp
src/line_following/src/nodes/: io_node.cpp
